# simple-mail

./: LICENSE  README.md  pyproject.toml
email/: cli_commands.py  enums.py  mailer.py  models.py  schema.py
tests/: test_schemas.py
